# metlibs-milogger

./: .gitignore  CMakeLists.txt  LogHandler.cpp  LogHandler.h  Makefile  Makefile.am  README  configure.ac  libtool  logger.cc  metlibs-milogger.pc.in  miLogger.pc.in  miLogging.cc  miLogging.h  miLogging_iostream.cc  miLogging_log4cpp.cc  milogger.pc.in
cmake/: MetnoGTestUtils.cmake  MetnoUtils.cmake
debian/: changelog  control  metlibs-milogger-dev.install  rules
include/: Makefile.am
src/: CMakeLists.txt  Makefile  Makefile.am  logger.cc  logger.h  miLoggerVersion.h  miLogging.cc  miLogging.h  miLoggingLog4Cpp.cc  miLoggingLog4Cpp.h  miLoggingLogger.cc  miLoggingLogger.h  miLoggingMemory.cc  miLoggingMemory.h  miLoggingNone.cc  miLoggingNone.h  miLoggingScopes.cc  miLoggingScopes.h  miLoggingSimple.cc  miLoggingSimple.h  miLoggingStringRecord.cc  miLoggingStringRecord.h  miLoggingSystem.cc  miLoggingSystem.h  miLoggingUtils.cc  miLoggingUtils.h  miLogging_log4cpp.cc
test/: CMakeLists.txt  log_something.cc  tag_thresholds.cc  test_main.cc
